make-a-wish-salesforce/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account_Email__c</fullName>
        <description>This field will be used as a hidden field to store the account email to merge with the email template</description>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>It will be used as a hidden field to store the volunteer account</description>
        <label>Account Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <description>It will be used as a hidden field to store the account phone</description>
        <label>Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Availability_Time_Other1__c</fullName>
        <description>It will hold the details about Availability Time Other details.</description>
        <label>Availability Time Other1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availability_Time_Other2__c</fullName>
        <description>It will hold the details about Availability Time Other details.</description>
        <label>Availability Time Other2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availability_Time_Other3__c</fullName>
        <description>It will hold the details about Availability Time Other details.</description>
        <label>Availability Time Other3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Date1__c</fullName>
        <description>This field will contain the Volunteer Available Date 1 for interview</description>
        <label>Available Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Available_Date2__c</fullName>
        <description>This field will hold the value of Volunteer Available Date2 for interview</description>
        <label>Available Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Available_Date3__c</fullName>
        <description>This field will hold the value of volunteer available date 3 for interview</description>
        <label>Available Date3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Available_Time1__c</fullName>
        <description>This field will hold the value of volunteer volunteer available time1 for interview.</description>
        <label>Available Time1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:00AM - 11:00AM</fullName>
                </value>
                <value>
                    <fullName>11:00AM - 2:00PM</fullName>
                </value>
                <value>
                    <fullName>2:00PM - 5:00PM</fullName>
                </value>
                <value>
                    <fullName>No Preference</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_Time2__c</fullName>
        <description>This field will hold the value of volunteer Available Time2  for interview.</description>
        <label>Available Time2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:00AM - 11:00AM</fullName>
                </value>
                <value>
                    <fullName>11:00AM - 2:00PM</fullName>
                </value>
                <value>
                    <fullName>2:00PM - 5:00PM</fullName>
                </value>
                <value>
                    <fullName>No Preference</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_Time3__c</fullName>
        <description>This field will hold the value of volunteer available time3 for interview.</description>
        <label>Available Time3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:00AM - 11:00AM</fullName>
                </value>
                <value>
                    <fullName>11:00AM - 2:00PM</fullName>
                </value>
                <value>
                    <fullName>2:00PM - 5:00PM</fullName>
                </value>
                <value>
                    <fullName>No Preference</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chapter_Name__c</fullName>
        <description>It holds the name of the chapter</description>
        <label>Chapter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Date__c</fullName>
        <description>Interviewer can set the interview confirmed date to volunteer</description>
        <label>Confirmed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_Time__c</fullName>
        <description>It will hold the volunteer interview time</description>
        <label>Confirmed Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7:00:AM</fullName>
                </value>
                <value>
                    <fullName>7:30:AM</fullName>
                </value>
                <value>
                    <fullName>8:00:AM</fullName>
                </value>
                <value>
                    <fullName>8:30:AM</fullName>
                </value>
                <value>
                    <fullName>9:00:AM</fullName>
                </value>
                <value>
                    <fullName>9:30:AM</fullName>
                </value>
                <value>
                    <fullName>10:00:AM</fullName>
                </value>
                <value>
                    <fullName>10:30:AM</fullName>
                </value>
                <value>
                    <fullName>11:00:AM</fullName>
                </value>
                <value>
                    <fullName>11:30:AM</fullName>
                </value>
                <value>
                    <fullName>12:00:PM</fullName>
                </value>
                <value>
                    <fullName>12:30:PM</fullName>
                </value>
                <value>
                    <fullName>1:00:PM</fullName>
                </value>
                <value>
                    <fullName>1:30:PM</fullName>
                </value>
                <value>
                    <fullName>2:00:PM</fullName>
                </value>
                <value>
                    <fullName>2:30:PM</fullName>
                </value>
                <value>
                    <fullName>3:00:PM</fullName>
                </value>
                <value>
                    <fullName>3:30:PM</fullName>
                </value>
                <value>
                    <fullName>4:00:PM</fullName>
                </value>
                <value>
                    <fullName>4:30:PM</fullName>
                </value>
                <value>
                    <fullName>5:00:PM</fullName>
                </value>
                <value>
                    <fullName>5:30:PM</fullName>
                </value>
                <value>
                    <fullName>6:00:PM</fullName>
                </value>
                <value>
                    <fullName>6:30:PM</fullName>
                </value>
                <value>
                    <fullName>7:00:PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:30 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name_Hidden__c</fullName>
        <description>It will holds the volunteer contact name to merge in the email</description>
        <label>Contact Name Hidden</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will indicate that record is created manually or from external system.</description>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recurring_Frequency__c</fullName>
        <label>Recurring Frequency</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>It holds the order of the tasks.</description>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaskVolunteerRole__c</fullName>
        <description>It holds the volunteer Role</description>
        <label>TaskVolunteerRole</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Owner_Name__c</fullName>
        <formula>Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <description>It holds the interview location.</description>
        <label>Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isRecurrenceTask__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It shows whether the task created through recurrence task</description>
        <label>isRecurrenceTask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRecurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines whether the task is recurrence task or not</description>
        <label>isRecurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Engagement_Plan_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement Plan Task</label>
        <referenceTo>npsp__Engagement_Plan_Task__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Engagement_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement Plan</label>
        <referenceTo>npsp__Engagement_Plan__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>